added Function.evaluate